--- a/BlazorApp/Projet_BDR/Pages/Joueur/Delete.razor
+++ b/BlazorApp/Projet_BDR/Pages/Joueur/Delete.razor
@@ -1,6 +1,7 @@
 ﻿@page "/joueur/delete/{id}"
 @inject JoueurService JoueurService
 @inject NavigationManager NavigationManager
+@inject IJSRuntime IJSRuntime
 <PageTitle>Suppréssion de joueur</PageTitle>
 <form>
     <h3 class="control-label">Êtes-vous sûre de vouloir supprimer le joueur @joueur.Prenom @joueur.Nom?</h3>
@@ -24,7 +25,15 @@
     }
     protected void Accept()
     {
-        JoueurService.Delete(Int16.Parse(id));
+        try
+        {
+            JoueurService.Delete(Int16.Parse(id));
+        }
+        catch(Exception e)
+        {
+            IJSRuntime.InvokeVoidAsync("alert", e.Message);
+        }
+        
         End();
     }
 
